# tegame

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  bus.cpp  bus.h  cart.cpp  cart.h  instructions.h  main.cpp  nes.cpp  nes.h  r2a03.cpp  r2a03.h
src/common/: bitfield.h  nesrom.h
tests/: CMakeLists.txt  bitfield_t.cpp
